Vlasov Visual overflow fix

--- a/Vlasov visual/css/style.scss
+++ b/Vlasov visual/css/style.scss
@@ -943,6 +943,7 @@ body {
 
   .scroll-lock {
     padding-right: 0px;
+    overflow: hidden;
   }
 }
 
